--- a/FoodieApplication/frontend/FoodieApplication/src/app/search-Service/search/search.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/search-Service/search/search.component.css
@@ -31,3 +31,12 @@
   margin-top: 10px;
   background: rgba(0, 0, 0, 0.437);
 }
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a:hover {
+  color: rgb(190, 32, 111);
+}
