--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.css
@@ -1,6 +1,6 @@
 .card {
   width: 260px;
-  height: 270px;
+  height: 300px;
   display: inline-block;
   margin: 20px;
   border-radius: 2px;
@@ -10,4 +10,13 @@
 .card img {
   height: 150px;
   background: rgb(0 0 0 / 12%);
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a:hover {
+  color: rgb(190, 32, 111);
 }
