--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -17,7 +17,7 @@
     </a>
     <a routerLink="dishList/{{restuarent.restaurantId}}"></a>
     <button mat-mini-fab >
-        <mat-icon style="float: right;" color="whitesmoke" (click)="add(restuarent)" >favorite</mat-icon>
+        <mat-icon  color="whitesmoke" (click)="add(restuarent)" >favorite</mat-icon>
         </button>
     </mat-card>
     </div>
