--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
-<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<!-- <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
-<mat-sidenav-container class="sidenav-container">
+<!-- <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
@@ -25,18 +25,6 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <a style="text-decoration: none; color: white;" routerLink="">Foodie Application</a>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
-     
       <div style="display: flex;">
       <button mat-button color="accent"  class="search" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
       <button mat-button color="accent" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" class="search" routerLink="/rest">Send Restaurant</button>
@@ -81,5 +69,91 @@
     <p style="margin-left: 20px;text-align: center;">By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.<br> All trademarks are properties of their respective owners. 2008-2022 © FoodieApplication™ Ltd. All rights reserved.</p>
     </mat-card-footer>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
+
+
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top" style="height: 75px;">
+  <div class="container-fluid">
+  <a class="navbar-brand" href="#">Foodie Application</a>
+  <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+    aria-expanded="false" aria-label="Toggle navigation"> -->
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div class="navbar-nav ms-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button mat-button color="accent"  class="search" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
+        </li>
+        <li class="nav-item">
+        <button mat-button color="accent"  *ngIf = "userIsAuthenticated || adminIsAuthenticated" routerLink="profile">Profile</button>
+      </li>
+        <li class="nav-item">
+      <button mat-button color="accent"  routerLink="showRest">Show Restaurant</button>
+    </li>
+      <li class="nav-item">
+      <button mat-button color="accent"  *ngIf = "!adminIsAuthenticated" routerLink="getFav">Favourite</button>
+    </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" class="search" routerLink="/rest">Send Restaurant</button>
+        </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" routerLink="/dish">Send Dish</button>
+        </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/addRest">Add Restaurant</button>
+        </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/addDish">Add Dish</button>
+        </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/restRequest">View Restaurant Request</button>
+        </li>
+        <li class="nav-item">
+          <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/dishRequest">View Dish Request</button>
+        </li>
+  
+      </ul> 
+       <div> 
+        <a style="color: white;" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" mat-list-item routerLink="login"> <button mat-button  type="submit">Login</button> </a>
+       <a style="color: white;" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" mat-list-item routerLink="register"> <button mat-button  type="submit">SiginUp</button> </a>
+       </div>
+        <div *ngIf = "userIsAuthenticated || adminIsAuthenticated"> 
+         <button mat-button  color="accent" type="submit" (click)="logout()">Logout</button>
+       </div>
+</div>
+</div>
+</div>
+ 
+</nav>
+<!-- <div class="bg-image" [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}"> -->
+  <div class="bg-image" 
+  [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}" style="height: 100vh;margin-top: 75px;">
+<router-outlet></router-outlet>
+</div>
+
+<mat-card-footer style="width: 99.9vw;">
+  <div style="margin-top:350px;padding-left: 30px;display:flex;">
+    <div style="margin-left: 27%;">
+      <p><b>FOR YOU</b></p>
+
+      <p>Site Terms</p>
+      <p>Privacy Policy And Your Policy Rights</p>
+      <p>State Disclosures</p> 
+  </div>
+
+  <div style="margin-left:14%;">
+    <p><b>CONNECT WITH US</b></p>
+    <img class="img2" src="/assets/social-media-icons/facebook.png">
+    <img class="img2" src="/assets/social-media-icons/twitter.png">
+    <img class="img2" src="/assets/social-media-icons/instagram.png">
+    <img class="img2" src="/assets/social-media-icons/youtube.png">  
+</div>
+</div>
+
+<hr>
+<p style="margin-left: 20px;text-align: center;">By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.<br> All trademarks are properties of their respective owners. 2008-2022 © FoodieApplication™ Ltd. All rights reserved.</p>
+</mat-card-footer>
 
