--- a/FoodieApplication/frontend/FoodieApplication/src/app/user-login/user-login.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/user-login/user-login.component.html
@@ -1,10 +1,17 @@
+<div class="container" style="margin-top: 70px;">
+
+  <div class="row">
+
+    <div class="col-sm-8 offset-sm-2">
+
+      <div class="info-form">
 <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="email" placeholder="Mail Id" formControlName="userMailId">
@@ -23,7 +30,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <label id="example-radio-group-label">Type Of User</label>
           <mat-radio-group formControlName="loginType">
@@ -33,7 +40,7 @@
         </div>
       </div>
 
-      <div class="row" *ngIf="isAdmin">
+      <div class="row1" *ngIf="isAdmin">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="text" placeholder="Secret Key" formControlName="secretKey">
@@ -47,3 +54,7 @@
     </mat-card-actions>
   </mat-card>
 </form>
+      </div>
+    </div>
+  </div>
+</div>
