--- a/FoodieApplication/frontend/FoodieApplication/src/app/user-register/user-register.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/user-register/user-register.component.html
@@ -1,11 +1,17 @@
-<div class="col-md-12">
+<div class="container" style="margin-top: 70px;">
+
+  <div class="row">
+
+    <div class="col-sm-8 offset-sm-2">
+
+      <div class="info-form">
 <form [formGroup]="registerForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="register">
     <mat-card-header>
       <mat-card-title>User Register</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="email" placeholder="Mail Id" formControlName="userMailId">
@@ -13,7 +19,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="text" placeholder="Name" formControlName="userName">
@@ -21,7 +27,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="password" placeholder="Password" formControlName="userPassword">
@@ -29,7 +35,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
             <input matInput type="text" placeholder="Phone Number" formControlName="userPhoneNo">
@@ -38,7 +44,7 @@
       </div>
 
       <div>
-        <div class="row">
+        <div class="row1">
           <div class="col">
               <div>
                 <input type="file" (change)="onFileChanged($event)">
@@ -61,7 +67,7 @@
       </mat-select>
       </mat-form-field>
 
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
         <input type="text" matInput placeholder="Street Number" formControlName="streetNo">
@@ -69,7 +75,7 @@
         </div>
       </div>
       
-      <div class="row">
+      <div class="row1">
         <div class="col">
           <mat-form-field class="full-width">
         <input type="text" matInput placeholder="Street Name" formControlName="streetName">
@@ -77,7 +83,7 @@
     </div>
   </div>
 
-        <div class="row">
+        <div class="row1">
           <div class="col">
             <mat-form-field class="full-width">
         <input type="text" matInput placeholder="city" formControlName="city">
@@ -85,7 +91,7 @@
         </div>
       </div>
 
-        <div class="row">
+        <div class="row1">
           <div class="col">
             <mat-form-field class="full-width">
         <input type="text" matInput placeholder="state" formControlName="state">
@@ -93,7 +99,7 @@
         </div>
       </div>
 
-        <div class="row">
+        <div class="row1">
           <div class="col">
             <mat-form-field class="full-width">
         <input type="text"matInput placeholder="pincode" formControlName="pincode">
@@ -101,7 +107,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row1">
     <div class="col">
       <mat-form-field class="full-width">
   <input type="text"matInput placeholder="landmark" formControlName="landmark">
@@ -197,4 +203,7 @@
     </mat-card-actions>
   </mat-card>
 </form>
+</div>
+    </div>
+  </div>
 </div>
