--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -85,7 +85,7 @@
     <div class="navbar-nav ms-auto">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <button mat-button color="accent"  class="search" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
+          <button mat-button color="accent" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
         </li>
         <li class="nav-item">
         <button mat-button color="accent"  *ngIf = "userIsAuthenticated || adminIsAuthenticated" routerLink="profile">Profile</button>
@@ -132,9 +132,9 @@
   <div class="bg-image" 
   [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}" style="height: 100vh;margin-top: 75px;">
 <router-outlet></router-outlet>
-</div>
 
-<mat-card-footer style="width: 99.9vw;">
+
+<!-- <mat-card-footer style="width: 99.9vw;">
   <div style="margin-top:350px;padding-left: 30px;display:flex;">
     <div style="margin-left: 27%;">
       <p><b>FOR YOU</b></p>
@@ -155,5 +155,39 @@
 
 <hr>
 <p style="margin-left: 20px;text-align: center;">By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.<br> All trademarks are properties of their respective owners. 2008-2022 © FoodieApplication™ Ltd. All rights reserved.</p>
-</mat-card-footer>
+</mat-card-footer> -->
+
+
+<footer class="footer-section">
+    <div class="d-none
+                d-sm-flex
+                d-md-flex
+                d-lg-block
+                footer-navigations">
+      <a class="p-2" href="">ABOUT US</a>
+      <a class="p-2" href="">SERVICES</a>
+      <a class="p-2" href="">OUR WORK</a>
+      <a class="p-2" href="">CAREERS</a>
+      <a class="p-2" href="">CONTACT US</a>
+      <a class="p-2" href="">BLOG</a>
+      <a class="p-2" href="">EVENTS</a>
+      <a class="p-2" href="">Site Terms</a>
+      <a class="p-2" href="">State Disclosures</a>
+  </div>
+
+  <div class="social-icons">
+      <a href="" class="p-2 fa fa-facebook fa-lg"><img class="img2" src="/assets/social-media-icons/facebook.png"></a>
+      <a href="" class="p-2 fa fa-twitter fa-lg"><img class="img2" src="/assets/social-media-icons/twitter.png"></a>
+      <a href="" class="p-2 fa fa-instagram fa-lg"><img class="img2" src="/assets/social-media-icons/instagram.png"></a>
+      <a href="" class="p-2 fa fa-youtube fa-lg"><img class="img2" src="/assets/social-media-icons/youtube.png"></a>
+  </div>
+    
+  <div class="copyright-section">
+    <p class="p-2 mt-3 text-center">Copyright © 2021 FoodieApplication™</p>
+    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex"  href="">Security</a>
+    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex" href="">Privacy Policy</a>
+  </div>
+</footer>
+
+</div>
 
