--- a/FoodieApplication/frontend/FoodieApplication/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/profile-dashboard/profile-dashboard.component.css
@@ -1,5 +1,5 @@
 
-.emp-profile{
+.user-profile{
   padding: 3%;
   margin-top: 3%;
   margin-bottom: 3%;
@@ -29,12 +29,6 @@
   right: 0;
   top: 0;
 }
-.profile-head h5{
-  color: #333;
-}
-.profile-head h6{
-  color: white
-}
 .profile-edit-btn{
   border: none;
   border-radius: 1.5rem;
@@ -43,16 +37,6 @@
   font-weight: 600;
   color: #6c757d;
   cursor: pointer;
-}
-.proile-rating{
-  font-size: 12px;
-  color: #818182;
-  margin-top: 5%;
-}
-.proile-rating span{
-  color: #495057;
-  font-size: 15px;
-  font-weight: 600;
 }
 .profile-head .nav-tabs{
   margin-bottom:5%;
@@ -85,13 +69,16 @@
   list-style: none;
 }
 .profile-tab label{
-  font-weight: 600;
+  /* font-weight: 600; */
+  font-size:large;
+  font-family:cursive;
+  text-transform: capitalize;
+  color: whitesmoke;
 }
 .profile-tab p{
-  font-weight: 600;
-  color: white;
-}
-
-label{
-  color: white;
+  /* font-weight: 600; */
+  font-size:large;
+  font-family: cursive;
+  text-transform: capitalize;
+  color: whitesmoke;
 }
