--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -141,9 +141,9 @@
 </nav>
 <!-- <div class="bg-image" [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}"> -->
   <div class="bg-image" 
-  [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}" style="height: 100vh;margin-top: 75px;">
+  [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 /cover'}" style="height: 100%;margin-top: 75px;">
 <router-outlet></router-outlet>
-
+  </div>
 
 <!-- <mat-card-footer style="width: 99.9vw;">
   <div style="margin-top:350px;padding-left: 30px;display:flex;">
@@ -168,7 +168,7 @@
 <p style="margin-left: 20px;text-align: center;">By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.<br> All trademarks are properties of their respective owners. 2008-2022 © FoodieApplication™ Ltd. All rights reserved.</p>
 </mat-card-footer> -->
 
-
+<div style="background-color: #ceced6;margin-top: 0px;">
 <footer class="footer-section">
     <div class="d-none
                 d-sm-flex
@@ -199,6 +199,5 @@
     <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex" href="">Privacy Policy</a>
   </div>
 </footer>
-
 </div>
 
