--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -13,7 +13,7 @@
     </mat-card-content>
     </a>
     <a routerLink="dishList/{{restuarent.restaurantId}}"></a>
-    <button mat-mini-fab >
+    <button mat-mini-fab *ngIf="isadmin">
         <mat-icon  [style.color]="color" (click)="add(restuarent)" >favorite</mat-icon>
         </button>
     </mat-card>
