--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -143,6 +143,7 @@
   <div class="bg-image" 
   [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}" style="height: 100vh;margin-top: 75px;">
 <router-outlet></router-outlet>
+  </div>
 
 
 <!-- <mat-card-footer style="width: 99.9vw;">
@@ -169,7 +170,7 @@
 </mat-card-footer> -->
 
 
-<footer class="footer-section">
+<!-- <footer class="footer-section">
     <div class="d-none
                 d-sm-flex
                 d-md-flex
@@ -198,7 +199,5 @@
     <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex"  href="">Security</a>
     <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex" href="">Privacy Policy</a>
   </div>
-</footer>
-
-</div>
+</footer> -->
 
