--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -1,20 +1,21 @@
 
 <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
-    <mat-card app-player matRipple class="card" *ngFor="let restuarent of data">
+    <mat-card app-player matRipple class="card" *ngFor="let restuarent of restuarents">
         <a routerLink="dishList/{{restuarent.restaurantId}}">
         <mat-card-header>
         <mat-card-title>{{ restuarent.restaurantName }}</mat-card-title>
         <mat-card-subtitle>{{ restuarent.restaurantLocation }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-    <div *ngFor="let image of restuarent.image">
+        <img mat-card-image [src]="restuarent.restaurantImage">
+    <!-- <div *ngFor="let image of restuarent.image">
             <img mat-card-image [src]="image.image">
-        </div>
+        </div> -->
     </mat-card-content>
     </a>
     <a routerLink="dishList/{{restuarent.restaurantId}}"></a>
     <button mat-mini-fab >
-        <mat-icon  [style.color]="color" (click)="add(restuarent)" >favorite</mat-icon>
-        </button>
+        <mat-icon [style.color]="restuarent.isFavourite" (click)="add(restuarent)" >favorite</mat-icon>
+    </button>
     </mat-card>
     </div>
