--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
@@ -87,6 +87,8 @@
   left: 0;
   padding: 1rem;
   text-align: center;
+  background-image: url("src\assets\foot2.jpg");
+  /* background-color: rgba(122, 67, 189, 0.4) */
   /* margin-top: 1vh; */
   /* margin-bottom: 90vh; */
 }
