--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
@@ -88,6 +88,10 @@
   padding: 1rem;
   text-align: center;
   background-image: url("src\assets\foot2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   /* background-color: rgba(122, 67, 189, 0.4) */
   /* margin-top: 1vh; */
   /* margin-bottom: 90vh; */
