--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -178,15 +178,15 @@
                 align-content-center
                 justify-content-center
                 footer-navigations">
-      <a class="p-2" href="">ABOUT US</a>
-      <a class="p-2" href="">SERVICES</a>
-      <a class="p-2" href="">OUR WORK</a>
-      <a class="p-2" href="">CAREERS</a>
-      <a class="p-2" href="">CONTACT US</a>
-      <a class="p-2" href="">BLOG</a>
-      <a class="p-2" href="">EVENTS</a>
-      <a class="p-2" href="">Site Terms</a>
-      <a class="p-2" href="">State Disclosures</a>
+      <a class="p-2" routerLink="">ABOUT US</a>
+      <a class="p-2" routerLink="">SERVICES</a>
+      <a class="p-2" routerLink="">OUR WORK</a>
+      <a class="p-2" routerLink="">CAREERS</a>
+      <a class="p-2" routerLink="">CONTACT US</a>
+      <a class="p-2" routerLink="">BLOG</a>
+      <a class="p-2" routerLink="">EVENTS</a>
+      <a class="p-2" routerLink="">Site Terms</a>
+      <a class="p-2" routerLink="">State Disclosures</a>
   </div>
 
   <div class="d-md-flex
@@ -200,10 +200,10 @@
               justify-content-between
               align-items-center">       
     <div class="p-3 social-icons">
-      <a href="" class="p-2 fa fa-facebook fa-lg"><img class="img2" src="/assets/social-media-icons/facebook.png"></a>
-      <a href="" class="p-2 fa fa-twitter fa-lg"><img class="img2" src="/assets/social-media-icons/twitter.png"></a>
-      <a href="" class="p-2 fa fa-instagram fa-lg"><img class="img2" src="/assets/social-media-icons/instagram.png"></a>
-      <a href="" class="p-2 fa fa-youtube fa-lg"><img class="img2" src="/assets/social-media-icons/youtube.png"></a>
+      <a routerLink="" class="p-2 fa fa-facebook fa-lg"><img class="img2" src="/assets/social-media-icons/facebook.png"></a>
+      <a routerLink="" class="p-2 fa fa-twitter fa-lg"><img class="img2" src="/assets/social-media-icons/twitter.png"></a>
+      <a routerLink="" class="p-2 fa fa-instagram fa-lg"><img class="img2" src="/assets/social-media-icons/instagram.png"></a>
+      <a routerLink="" class="p-2 fa fa-youtube fa-lg"><img class="img2" src="/assets/social-media-icons/youtube.png"></a>
     </div>
 </div>
 </div> 
@@ -216,8 +216,8 @@
               p-5
               copyright-section">
     <p class="p-2 mt-3 text-center">Copyright © 2021 FoodieApplication™</p>
-    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex"  href="">Security</a>
-    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex" href="">Privacy Policy</a>
+    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex"  routerLink="">Security</a>
+    <a class="p-2 d-block text-center d-block d-md-block d-lg-inline-flex" routerLink="">Privacy Policy</a>
   </div>
 </footer>
 </div>
