--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -7,9 +7,9 @@
     </mat-card-header>
     <mat-card-content>
         <img mat-card-image [src]="restuarent.restaurantImage">
-    <!-- <div *ngFor="let image of restuarent.image">
+    <div *ngFor="let image of restuarent.image">
             <img mat-card-image [src]="image.image">
-        </div> -->
+        </div>
     </mat-card-content>
     </a>
     <a routerLink="dishList/{{restuarent.restaurantId}}"></a>
