--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
@@ -9,7 +9,7 @@
   </div>
 </mat-card-content>
 <button mat-mini-fab >
-  <mat-icon style="float: right;" (click)="remove(dish)" >favorite</mat-icon>
+  <mat-icon style="float: right; color:red" (click)="remove(dish)" >favorite</mat-icon>
 </button>
 </mat-card>
 
